# green-flash-research

./: .gitignore  .zenodo.json  CITATION.cff  Makefile  README.md  REVIEW.md  pyproject.toml
artifacts/: manifest.json  manifest.template.json
config/: example.json
data/: README.md
paper/: Makefile  preprint.tex  preprint_nocite.tex  refs.bib
results/: summary.json
scripts/: reproduce.py
src/greenflash/: __init__.py  flash.py  refraction.py  sensors.py
tests/: test_flash.py
